<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="45dp"
            android:layout_gravity="center"
            android:src="@drawable/gyaan_daan"
            android:contentDescription="@string/todo" />

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginTop="45dp">

            <TextView
                android:id="@+id/standard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background"
                android:drawableEnd="@android:drawable/arrow_down_float"
                android:drawablePadding="16dp"
                android:hint="@string/select_standard"
                android:padding="12dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/subjects"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background"
                android:drawableEnd="@android:drawable/arrow_down_float"
                android:drawablePadding="16dp"
                android:hint="@string/select_subjects"
                android:padding="12dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/board"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background"
                android:drawableEnd="@android:drawable/arrow_down_float"
                android:drawablePadding="16dp"
                android:hint="Select Board"
                android:padding="12dp"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/hours"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hours_available_in_a_week"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxCornerRadiusTopStart="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/hours2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/bg_download"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/update"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>