<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.156">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="140dp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="#000000"
                android:text="@string/student_name"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/student_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

        </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="140dp"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textColor="#000000"
                    android:text="@string/standard"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/std"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:text="@string/board"
                    android:textColor="#000000"
                    android:layout_marginStart="10dp"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/board"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="140dp"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textColor="#000000"
                    android:text="@string/subject"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/subject"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp" />

            </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/googleMeet"
                android:layout_width="83dp"
                android:layout_height="match_parent"
                android:src="@drawable/google_meet" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="OR"
                android:layout_gravity="center"
                android:textColor="#000000"
                android:layout_margin="15dp"/>

            <ImageButton
                android:layout_width="100dp"
                android:layout_height="64dp"
                android:id="@+id/zoom"
                android:src="@drawable/zoom" />
        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="140dp"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:layout_marginStart="10dp"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/select_time"
                    android:hint="@string/select_time"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:text="@string/link"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:layout_marginStart="10dp"
                    android:textSize="20sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/link"/>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="150dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_download"
                android:text="@string/schedule_class"
                android:id="@+id/schedule"
                android:textColor="#FFFFFF" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>