<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FindTeacher">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/gyaan_daan"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toTopOf="@+id/linear1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"/>

    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.13">

        <TextView
            android:id="@+id/standard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:drawableEnd="@android:drawable/arrow_down_float"
            android:drawablePadding="16dp"
            android:hint="@string/select_standard"
            android:padding="12dp"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="68dp"
            tools:layout_editor_absoluteY="310dp" />

        <TextView
            android:id="@+id/subjects"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:drawableEnd="@android:drawable/arrow_down_float"
            android:drawablePadding="16dp"
            android:hint="@string/select_subjects"
            android:padding="12dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/board"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:drawableEnd="@android:drawable/arrow_down_float"
            android:drawablePadding="16dp"
            android:hint="Select Board"
            android:padding="12dp"
            android:textSize="18sp" />

    </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:id="@+id/search"
                android:background="@drawable/bg_download"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/teacher_info"
            android:layout_marginTop="15dp"
            android:layout_marginStart="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>